tests/fixtures/pass/async_failed_task_cached_vm.walrus
async fn boom : {
    throw "boom";
}

let task = boom();

try {
    await task;
} catch err {
    println("first:" + err);
};

try {
    await task;
} catch err {
    println("second:" + err);
};

println(task);
