tests/fixtures/fail/async/async_uncaught_rejection_vm.walrus
async fn boom : {
    throw "boom";
}

let task = boom();
println(await task);
